objects/Legal_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Extension of legal address</description>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Extension of legal address</description>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregation_CONSOL__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_FS__c</fullName>
        <description>&quot;Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)
&quot;</description>
        <label>Aggregation (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFP__c</fullName>
        <description>&quot;Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)
&quot;</description>
        <label>Aggregation (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFSC__c</fullName>
        <description>&quot;Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_WF_REP__c</fullName>
        <description>&quot;Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)
&quot;</description>
        <label>Aggregation (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alias_Default__c</fullName>
        <label>Alias: Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *&lt;some character&gt;* eg. *AU*</inlineHelpText>
        <label>Business Region</label>
        <referenceTo>Business_Region__c</referenceTo>
        <relationshipLabel>Legal Entitys</relationshipLabel>
        <relationshipName>Legal_Entitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Mgmt_Hierarchy_Parent_Code__c</fullName>
        <formula>Hierarchy_for_legal_entity__r.Node_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Mgmt Hierarchy Parent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_2_3_Char__c</fullName>
        <formula>Country__r.ISO_Code__c +&quot;-&quot;+ Country__r.ISO_Code2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code (2-3 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *&lt;some character&gt;* eg. *Uni*</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Legal Entitys</relationshipLabel>
        <relationshipName>Legal_Entitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <formula>Currency__r.Currency_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use ISO Code to search</inlineHelpText>
        <label>Currency</label>
        <referenceTo>Currencies__c</referenceTo>
        <relationshipLabel>Legal Entitys</relationshipLabel>
        <relationshipName>Legal_Entitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Storage_CONSOL__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_FS__c</fullName>
        <description>&quot;• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.&quot;</description>
        <label>Data Storage (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFP__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFSC__c</fullName>
        <description>&quot;• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.&quot;</description>
        <label>Data Storage (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_WF_REP__c</fullName>
        <description>&quot;• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.&quot;</description>
        <label>Data Storage (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Data Type: The data storage value. Valid values:
• Currency: Stores and displays the member value in the default currency.
• Non-currency: Stores and displays the member value as a numeric value.
• Percentage: Stores values as numeric values and displays the member value as a percentage.
• Smart List: Stores values as numeric values and displays the member value as a string.
• Date: Stores and displays the member value in the format mm/dd/yyyy or dd/mm/yyyy.
• Text: Stores and displays the member&apos;s value as text.
• Unspecified: Stores and displays the member value as Unspecified</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unspecified</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Non Currency</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>SmartList</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elimination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Elimination</description>
        <label>Elimination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freez_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <description>https://docs.oracle.com/cd/E57185_01/OEPAG/ch13s01.html</description>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                </value>
                <value>
                    <fullName>Stored</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_for_legal_entity_PN__c</fullName>
        <formula>Hierarchy_for_legal_entity__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy for legal entity PN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_for_legal_entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hierarchy for legal entity</description>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Hierarchy for legal entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Legal Entity</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Legal Entity Management Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Legal Entitys</relationshipLabel>
        <relationshipName>Legal_Entitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <formula>Country__r.ISO_Code2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Unique_ID__c</fullName>
        <label>Internal Unique ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Hierarchy_PN__c</fullName>
        <formula>Legal_Entity_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Hierarchy PN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Legal Entity Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Legal Entity</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Legal Entity Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Legal Entities (Management hierarchy for legal entity)</relationshipLabel>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_ID__c</fullName>
        <description>Unique identifier</description>
        <label>Legal Entity ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Management_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Legal Entity Management Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Legal Entity</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Legal Entity Management Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Legal Entities (Lowest level parent node)</relationshipLabel>
        <relationshipName>Legal_Entities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <externalId>true</externalId>
        <label>Legal Entity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowest_level_PN__c</fullName>
        <formula>Legal_Entity_Management_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowest level PN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_No_Hierarchy__c</fullName>
        <description>Legal entity description</description>
        <label>Name (No Hierarchy)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type_CONSOL__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_FS__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFSC__c</fullName>
        <label>Plan Type (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FALSE</fullName>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_WF_REP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Business_Region__r.Region_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solve_Order_CONSOL__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (CONSOL)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solve_Order_WF_REP__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (WF_REP)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State/Province</description>
        <label>State/Province</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Legal Entitys</relationshipLabel>
        <relationshipName>Legal_Entitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active/inactive indicator</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>